SERVER-76772 Fix Catalogid tracker cleanup after untimestamped writes